--- a/azure-radiator/src/app/modules/projects/pages/projects/projects.component.html
+++ b/azure-radiator/src/app/modules/projects/pages/projects/projects.component.html
@@ -4,6 +4,7 @@
     [title]="project.name"
     [text]="project.description"
     type="project"
+    (click)="openProject(project.id)"
   >
   </app-card>
 </div>
