--- a/azure-radiator/src/app/shared/components/card/card.component.html
+++ b/azure-radiator/src/app/shared/components/card/card.component.html
@@ -1,9 +1,13 @@
 <div class="card">
   <div class="color-stripe" [ngClass]="cardType"></div>
   <div class="container">
-    <h4>
-      <b>{{ title }}</b>
-    </h4>
-    <p>{{ text }}</p>
+    <div>
+      <h4>
+        <b>{{ title }}</b>
+      </h4>
+    </div>
+    <div>
+      <p>{{ text }}</p>
+    </div>
   </div>
 </div>
